# ChronoArchiver

./: .SRCINFO  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CONVERSATION_LOG.md  NOTES.md  PKGBUILD  README.md  SECURITY.md  TASKS.md  TODO.md  WALKTHROUGH.md  chronoarchiver.desktop  chronoarchiver.install  chronoarchiver.pyw  pyproject.toml  requirements.txt
.github/workflows/: ci-tests.yml  ci.yml  release-installers.yml
flatpak/: README.md  io.github.UnDadFeated.ChronoArchiver.metainfo.xml  io.github.UnDadFeated.ChronoArchiver.yml  requirements-flatpak.txt
src/: bootstrap.py  version.py
src/core/: ai_inference_resources.py  app_paths.py  av1_engine.py  av1_settings.py  beautify_visual_analysis.py  changelog_notes.py  debug_logger.py  fs_task_lock.py  gpu_errors.py  logger.py  ml_runtime.py  model_manager.py  network_status.py  organizer.py  realesrgan_models.py  realesrgan_runner.py  remote_encode.py  remote_ssh.py  restart.py  rrdbnet.py  scanner.py  single_instance.py  updater.py  upscaler_settings.py  venv_manager.py  video_subject_detect.py  video_target_presets.py  video_upscaler_settings.py  zimage_auto_params.py  zimage_beautify_prompts.py  zimage_engine.py  (+1 more)
tests/: conftest.py  test_app_paths.py  test_integration_av1_settings.py  test_integration_ffmpeg.py  test_integration_ml_runtime.py  test_integration_opencv.py  test_integration_organizer.py  test_integration_rrdbnet_forward.py  test_integration_scanner_engine.py  test_qt_offscreen.py  test_realesrgan_helpers.py  test_remote_ssh.py  test_smoke_imports.py  test_test_files_workspace.py  test_video_target_presets.py
tools/: ChronoArchiver.iss  bump_version.py  chronoarchiver.spec  chronoarchiver_setup.spec  reverse_media_organize_from_log.py  setup_launcher.py
(+14 files in other folders)
