[project]
name = "chronoarchiver"
version = "5.7.10"
description = "Unified media management: organizer, AV1 encoder, AI scanner"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pre-commit>=3.0",
    "mypy>=1.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [".audit_venv", ".git", "__pycache__"]

[tool.ruff.lint]
ignore = [
    "E402",  # Module level import not at top (intentional: path setup before imports)
    "E701",  # Multiple statements on one line (colon)
    "E702",  # Multiple statements on one line (semicolon)
    "E731",  # Lambda assignment (legacy)
]

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = true
explicit_package_bases = true
mypy_path = "src"
namespace_packages = true

[[tool.mypy.overrides]]
module = [
    "PySide6.*",
    "PIL.*",
    "cv2.*",
    "numpy.*",
    "torch.*",
    "psutil.*",
    "requests.*",
    "huggingface_hub.*",
]
ignore_missing_imports = true
